cmake_minimum_required(VERSION 3.13)
project(NetworkProgramming)

set(CMAKE_CXX_STANDARD 14)

add_executable(NetworkProgramming main.cpp)
add_executable(echosrv echosrv.cpp)
add_executable(echocli echocli.cpp)
add_executable(echosrv2 echosrv2.cpp)
add_executable(echocli2 echocli2.cpp)
add_executable(echosrv3 echosrv3.cpp)
add_executable(echocli3 echocli3.cpp)
add_executable(echosrv4 echosrv4.cpp)
add_executable(echocli4 echocli4.cpp)
add_executable(echosrv5 echosrv5.cpp)
add_executable(echocli5 echocli5.cpp)
add_executable(echosrv6 echosrv6.cpp)
add_executable(echocli6 echocli6.cpp)
add_executable(gethostbyname_test gethostbyname_test.cpp)
add_executable(p2pcli p2pcli.cpp)
add_executable(p2pserv p2pserv.cpp)