cmake_minimum_required(VERSION 3.13)
project(NetworkProgramming)

set(CMAKE_CXX_STANDARD 14)

add_executable(NetworkProgramming main.cpp)
add_executable(echosrv echosrv.cpp)
add_executable(echocli echocli.cpp)
add_executable(echosrv2 echosrv2.cpp)
add_executable(echocli2 echocli2.cpp)
add_executable(echosrv3 echosrv3.cpp)
add_executable(echocli3 echocli3.cpp)
add_executable(echosrv4 echosrv4.cpp)
add_executable(echocli4 echocli4.cpp)
add_executable(echosrv5 echosrv5.cpp)
add_executable(echocli5 echocli5.cpp)
add_executable(echosrv6 echosrv6.cpp)
add_executable(echocli6 echocli6.cpp)
add_executable(echosrv7 echosrv7.cpp)
add_executable(echocli7 echocli7.cpp)
add_executable(conntest conntest.cpp)
add_executable(pollsrv pollsrv.cpp)
add_executable(epollsrv epollsrv.cpp)
add_executable(gethostbyname_test gethostbyname_test.cpp)
add_executable(p2pcli p2pcli.cpp)
add_executable(p2pserv p2pserv.cpp)
add_executable(udpsrv udpsrv.cpp)
add_executable(udpcli udpcli.cpp)
add_executable(udpmulclt udpmulclt.cpp)
add_executable(udpmulsrv udpmulsrv.cpp)
add_executable(unixcli unixcli.cpp)
add_executable(unixsrv unixsrv.cpp)
add_executable(sockpair sockpair.cpp)
add_executable(sockpair02 sockpair02.cpp)
add_executable(msgget msgget.cpp)
add_executable(msgctl01 msgctl01.cpp)
add_executable(msgctl02 msgctl02.cpp)
add_executable(msg_send msg_send.cpp)
add_executable(msg_recv msg_recv.cpp)
add_executable(msgcli msgcli.cpp)
add_executable(msgsrv msgsrv.cpp)
add_executable(mmap_recv mmap_recv.cpp)
add_executable(mmap_send mmap_send.cpp)
add_executable(shmread shmread.cpp)
add_executable(shmwrite shmwrite.cpp)
add_executable(sem sem.cpp)
add_executable(sem02 sem02.cpp)
add_executable(sem03 sem03.cpp)

add_subdirectory(udpchat)
add_subdirectory(shmfifo)

set(semsrc
        sem.cpp)

add_library(semtool ${semsrc})